# i18nKDE

./: .gitignore  CMakeLists.txt  generateMO.py  generateTS.py  main.cpp
UI/: Dialog1.cpp  Dialog1.h  dialog_1.ui
po/: demo.mo  demo.po  demo.pot  template.po  zh_CN.mo  zh_CN.po
